syntax = "proto3";

package wilson.api.manager.auth.v1;

option go_package = "manager/auth/v1;v1";

import "validate/validate.proto";

message AuthRequest{
  string path = 1[(validate.rules).string = {min_len: 1}];
  string method = 2[(validate.rules).string = {in: ["GET", "POST", "PUT", "DELETE"]}];
}

message AuthReply{
  uint32 userId = 1;
  uint32 roleId = 2;
  string roleKeyword = 3;
  uint32 departmentId = 4;
  string departmentKeyword = 5;
}